<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>custom_interfaces</name>
  <version>0.0.1</version>
  <description>
    [User Custom interfaces]

    How To Add "new interface"

      - msg
	  add ${NAME}.msg in msg/
      - srv
	  add ${NAME}.srv in srv/
      - action
	  add ${NAME}.action in action/

    How To Use "package"

      - package.xml (common)
          add "depend" "custom_interfaces"
      - CMakefiles.txt (rclcpp)
          find_package(custom_interfaces REQUIRED)
          ament_target_dependencies(${TARGET}
            custom_interfaces
            ...
          )
      - cpp/hpp (rclcpp)
          add #include "msg/${NAME}.msg"
          add #include "srv/${NAME}.srv"
          add #include "action/${NAME}.action"
      - py (rclpy)
	  add from ${NAME}.msg import ${NAME}
  </description>
  <maintainer email="jkhpro1003@gmail.com">steve</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
